--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.javainuse</groupId>
 	<artifactId>SpringBootJenkinsPOC</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT-${build.number}</version>
 	<packaging>jar</packaging>
 
 	<name>SpringBootJenkinsPOC</name>
@@ -17,6 +17,33 @@
 		<version>1.4.1.RELEASE</version>
 		<relativePath>/pom.xml</relativePath> 
 	</parent>
+
+	<plugins>
+    		 <plugin>
+       			 <artifactId>Maven-compiler-plugin</artifactId>
+       			 <version>3.1</version>
+       			 <configuration>
+         			 <source>1.6</source>
+         			 <target>1.6</target>
+       			 </configuration>
+    		 </plugin>
+    		 <plugin>
+       			 <groupId>org.apache.Maven.plugins</groupId>
+      			  <artifactId>Maven-jar-plugin</artifactId>
+       			 <version>2.5</version>
+       			 <configuration>
+         			 <archive>
+            				 <index>true</index>
+            				 <manifest>
+               				  <addClasspath>true</addClasspath>
+            				 </manifest>
+            				 <manifestEntries>
+              				  <Implementation-Version>${build.number}</Implementation-Version>
+            				 </manifestEntries>
+         			 </archive>
+       			 </configuration>
+    		 </plugin>
+	</plugins>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
