--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.javainuse</groupId>
 	<artifactId>SpringBootJenkinsPOC</artifactId>
-	<version>0.0.1-SNAPSHOT-${build.number}</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>SpringBootJenkinsPOC</name>
