--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version> 
+		<version>1.4.1.RELEASE</version>
+                <relativePath>/root/Music/opensuse-springboot-pipeline/pom.xml</relativePath> 
 	</parent>
 
 	<properties>
