--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.1.RELEASE</version>
-                <relativePath/>
+                <relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<properties>
