--- a/pom.xml
+++ b/pom.xml
@@ -19,17 +19,38 @@
 	</parent>
 
 	<repositories>
- 		 <repository> 
-     			 <id>artifactory-repo</id> 
-     			 <url>http://localhost:8081/artifactory/libs-release</url> 
-  			 <releases> 
-   				 <enabled>true</enabled> 
-  			 </releases> 
-  			 <snapshots> 
-    				 <enabled>true</enabled> 
-  			 </snapshots> 
- 		 </repository>
+   		 <repository>
+       			 <id>central</id>
+       			 <url>http://localhost:8081/artifactory/libs-release</url>
+       			 <snapshots>
+           			 <enabled>false</enabled>
+       			 </snapshots>
+   		 </repository>
+   		 <repository>
+       			 <id>snapshots</id>
+       			 <url>http://localhost:8081/artifactory/libs-snapshot</url>
+       			 <releases>
+           			 <enabled>false</enabled>
+       			 </releases>
+   		 </repository>
 	</repositories>
+
+	<pluginRepositories>
+   		 <pluginRepository>
+       			 <id>central</id>
+       			 <url>http://localhost:8081/artifactory/plugins-release</url>
+       			 <snapshots>
+           			 <enabled>false</enabled>
+       			 </snapshots>
+   		 </pluginRepository>
+   		 <pluginRepository>
+       			 <id>snapshots</id>
+       			 <url>http://localhost:8081/artifactory/plugins-snapshot</url>
+       			 <releases>
+           			 <enabled>false</enabled>
+       			 </releases>
+   		 </pluginRepository>
+	</pluginRepositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
