updated pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,14 @@
 	<repositories>
    		 <repository>
        			 <id>central</id>
-       			 <url>http://localhost:8081/artifactory/libs-release</url>
+       			 <url>http://10.118.40.166:8081/artifactory/libs-release</url>
        			 <snapshots>
            			 <enabled>false</enabled>
        			 </snapshots>
    		 </repository>
    		 <repository>
        			 <id>snapshots</id>
-       			 <url>http://localhost:8081/artifactory/libs-snapshot</url>
+       			 <url>http://10.118.40.166:8081/artifactory/libs-snapshot</url>
        			 <releases>
            			 <enabled>false</enabled>
        			 </releases>
@@ -38,14 +38,14 @@
 	<pluginRepositories>
    		 <pluginRepository>
        			 <id>central</id>
-       			 <url>http://localhost:8081/artifactory/plugins-release</url>
+       			 <url>http://10.118.40.166:8081/artifactory/plugins-release</url>
        			 <snapshots>
            			 <enabled>false</enabled>
        			 </snapshots>
    		 </pluginRepository>
    		 <pluginRepository>
        			 <id>snapshots</id>
-       			 <url>http://localhost:8081/artifactory/plugins-snapshot</url>
+       			 <url>http://10.118.40.166:8081/artifactory/plugins-snapshot</url>
        			 <releases>
            			 <enabled>false</enabled>
        			 </releases>
