--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+   		    <artifactId>spring-boot-maven-plugin</artifactId>
+  		    <version>2.1.4.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
