--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
            			 <enabled>false</enabled>
        			 </releases>
    		 </repository>
+		 <repository>
+           		 <id>spring-snapshots</id>
+           		 <url>http://repo.spring.io/snapshot</url>
+           		 <snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+       		 </repository>
+       		 <repository>
+       			 <id>spring-milestones</id>
+           		 <url>http://repo.spring.io/milestone</url>
+      		 </repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -50,6 +61,14 @@
            			 <enabled>false</enabled>
        			 </releases>
    		 </pluginRepository>
+		 <pluginRepository>
+           		 <id>spring-snapshots</id>
+           		 <url>http://repo.spring.io/snapshot</url>
+       	         </pluginRepository>
+       		 <pluginRepository>
+           		 <id>spring-milestones</id>
+           		 <url>http://repo.spring.io/milestone</url>
+        	 </pluginRepository>
 	</pluginRepositories>
 
 	<properties>
