--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.4.RELEASE</version>
                 <relativePath>../pom.xml</relativePath>
 	</parent>
 
