--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	</parent>
 
 	<repositories>
-   		 <repository>
+   	 <!--	 <repository>
        			 <id>central</id>
        			 <url>http://localhost:8081/artifactory/libs-release</url>
        			 <snapshots>
@@ -32,7 +32,7 @@
        			 <releases>
            			 <enabled>true</enabled>
        			 </releases>
-   		 </repository>
+   		 </repository     -->>
 		 <repository>
            		 <id>spring-snapshots</id>
            		 <url>http://repo.spring.io/snapshot</url>
