--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
        			 <releases>
            			 <enabled>true</enabled>
        			 </releases>
-   		 </repository     -->>
+   		 </repository>     -->
 		 <repository>
            		 <id>spring-snapshots</id>
            		 <url>http://repo.spring.io/snapshot</url>
