pom.xml updated

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
        			 <id>spring-milestones</id>
            		 <url>http://repo.spring.io/milestone</url>
       		 </repository>
-	</repositories>    -->
+	</repositories>   
 
 	<pluginRepositories>
    		 <pluginRepository>
@@ -70,7 +70,7 @@
            		 <url>http://repo.spring.io/milestone</url>
         	 </pluginRepository>
 	</pluginRepositories>
-
+        -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
