--- a/pom.xml
+++ b/pom.xml
@@ -83,13 +83,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -124,7 +122,142 @@
                                		  </archive>
                        		  </configuration>
                 	 </plugin>
-		 </plugins>
+			
+			 <plugin>
+	                    <groupId>org.apache.maven.plugins</groupId>
+	                    <artifactId>maven-war-plugin</artifactId>
+	                    <version>2.4</version>
+               		 </plugin>
+
+               		 <plugin>
+	                    <groupId>org.apache.maven.plugins</groupId>
+	                    <artifactId>maven-source-plugin</artifactId>
+	                    <version>2.1.2</version>
+	                </plugin>
+
+	<!--		<plugin>
+           			 <groupId>org.jfrog.buildinfo</groupId>
+           			 <artifactId>artifactory-maven-plugin</artifactId>
+          			  <version>2.6.1</version>
+          			  <inherited>false</inherited>
+           			 <executions>
+               				 <execution>
+                   				 <id>build-info</id>
+                   				 <goals>
+                       					 <goal>publish</goal>
+                   				 </goals>
+                   				 <configuration>
+                       					 <deployProperties>
+                           					 <gradle>awesome</gradle>
+                        				         <review.team>qa</review.team>
+                       					 </deployProperties>
+                       					 <publisher>
+                           					 <contextUrl>http://10.118.40.166:8081/artifactory</contextUrl>
+                           						 <username>admin</username>
+                           						 <password>passwod</password>
+                           						 <repoKey>libs-release-local</repoKey>
+                           						 <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+                       					 </publisher>
+                   				 </configuration>
+               				 </execution>
+           			 </executions>
+      		  </plugin>    -->
+
+		<plugin>
+	                <groupId>org.jfrog.buildinfo</groupId>
+        	        <artifactId>artifactory-maven-plugin</artifactId>
+                	<version>2.7.0</version>
+                	<inherited>false</inherited>
+
+                <executions>
+                    <execution>
+                        <id>build-info</id>
+
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+
+                        <configuration>
+
+                            <deployProperties>
+                                <gradle>awesome</gradle>
+                            </deployProperties>
+
+                            <artifactory>
+                                <includeEnvVars>true</includeEnvVars>
+                                <envVarsExcludePatterns>*password*,*secret*,*key*,*token*,*passphrase*</envVarsExcludePatterns>
+                               <timeoutSec>60</timeoutSec>
+                            </artifactory>
+
+                            <publisher>
+                                <contextUrl>http://10.118.40.166:8081/artifactory</contextUrl>
+                                <username>admin</username>
+                                <password>password</password>
+                                <excludePatterns>*-tests.jar</excludePatterns>
+                                <repoKey>libs-release-local</repoKey>
+                                <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+                            </publisher>
+
+                            <buildInfo>
+                                <buildName>plugin-demo</buildName>
+                                <buildNumber>${buildnumber}</buildNumber>
+                               <buildUrl>http://build-url.org</buildUrl>
+                            </buildInfo>  
+
+                            <licenses>
+                                <autoDiscover>true</autoDiscover>
+                                <includePublishedArtifacts>false</includePublishedArtifacts>
+                                <runChecks>true</runChecks>
+                                <scopes>compile,runtime</scopes>
+                                <violationRecipients>build@organisation.com</violationRecipients>
+                            </licenses>
+                        </configuration>
+                    </execution>
+                </executions>
+	</plugin> 
+	
+	<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                   <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>
+                </configuration>
+            </plugin>
+	 </plugins>
 	</build>
+    
+     <repositories>
+       	 <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+         </repository>
+    </repositories>
+
+   <pluginRepositories>
+        <pluginRepository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>bintray-plugins</name>
+            <url>http://jcenter.bintray.com</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
