--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
        		 </repository>
        		 <repository>
        			 <id>spring-milestones</id>
-           		 <url>http://repo.spring.io/milestone</url>
+
+	      <url>http://repo.spring.io/milestone</url>
       		 </repository>
 	</repositories>   
 
@@ -88,6 +89,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+    			<groupId>org.jenkins-ci.plugins</groupId>
+    			<artifactId>global-build-stats</artifactId>
+    			<version>1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
