--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,9 @@
 			</plugin>
 		
 			<plugin>
-                        	 <artifactId>Maven-compiler-plugin</artifactId>
-                        	 <version>3.1</version>
-                        	 <configuration>
-                                	 <source>1.6</source>
-                                	 <target>1.6</target>
-                        	 </configuration>
+                        	 <groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.0</version>
                 	 </plugin>
                 
 			 <plugin>
@@ -139,7 +136,7 @@
 		<plugin>
        			 <groupId>org.sonarsource.scanner.maven</groupId>
        			 <artifactId>sonar-maven-plugin</artifactId>
-       			 <version>3.6.0.1398</version>
+       			 <version>3.2</version>
      		 </plugin>
 	
 	 </plugins>
