--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,8 @@
 
                             <publisher>
                                 <contextUrl>http://10.118.40.166:8081/artifactory</contextUrl>
-                                <username>admin</username>
+
+				    <username>admin</username>
                                 <password>password</password>
                                 <excludePatterns>*-tests.jar</excludePatterns>
                                 <repoKey>libs-release-local</repoKey>
@@ -163,5 +164,80 @@
             <url>http://jcenter.bintray.com</url>
         </pluginRepository>
     </pluginRepositories>     -->
+<profiles>
 
+    <profile>
+
+      <id>sonar-coverage</id>
+
+      <activation>
+
+        <activeByDefault>true</activeByDefault>
+
+      </activation>
+
+      <build>
+
+        <pluginManagement>
+
+          <plugins>
+
+            <plugin>
+
+              <groupId>org.jacoco</groupId>
+
+              <artifactId>jacoco-maven-plugin</artifactId>
+
+              <version>0.8.3</version>
+
+            </plugin>
+
+          </plugins>
+
+        </pluginManagement>
+
+        <plugins>
+
+          <plugin>
+
+            <groupId>org.jacoco</groupId>
+
+            <artifactId>jacoco-maven-plugin</artifactId>
+
+            <executions>
+
+              <execution>
+
+                <goals>
+
+                  <goal>prepare-agent</goal>
+
+                </goals>
+
+              </execution>
+
+              <execution>
+
+                <id>report</id>
+
+                <goals>
+
+                  <goal>report</goal>
+
+                </goals>
+
+              </execution>
+
+            </executions>
+
+          </plugin>
+
+        </plugins>
+
+      </build>
+
+    </profile>
+
+  </profiles>
+	
 </project>
